--- a/ets2-tool/src-tauri/Cargo.toml
+++ b/ets2-tool/src-tauri/Cargo.toml
@@ -20,6 +20,7 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
+regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dirs = "5.0"
