--- a/ets2-tool/src-tauri/Cargo.toml
+++ b/ets2-tool/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ edition = "2021"
 name = "ets2_tool_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
+
 [build-dependencies]
 tauri-build = { version = "2", features = [] }
 
@@ -24,4 +25,4 @@ regex = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 dirs = "5.0"
-
+decrypt_truck = "1.3.4"
