--- a/ets2-tool/src-tauri/Cargo.toml
+++ b/ets2-tool/src-tauri/Cargo.toml
@@ -28,3 +28,6 @@ dirs = "6.0.0"
 decrypt_truck = "1.3.4"
 log = "0.4.29"
 chrono = "0.4.42"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
