--- a/ets2-tool/src-tauri/Cargo.toml
+++ b/ets2-tool/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ets2-tool"
-version = "0.2.0"
+version = "0.1.8"
 description = "A Tauri App"
 authors = ["xLieferant"]
 edition = "2021"
@@ -28,6 +28,7 @@ dirs = "6.0.0"
 decrypt_truck = "1.3.4"
 log = "0.4.29"
 chrono = "0.4.42"
+tauri-plugin-process = "2"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-updater = "2"
