Refactor profile & save handling, fix save path issues, improve UI integration
Changes:
- Refactored `find_profile_saves` to reliably detect quicksave, autosave, and manual saves
- Fixed `game_sii_from_save` function signature and usage to properly handle Path vs String
- Added `#[derive(PartialEq)]` to `SaveKind` enum to enable comparisons
- Updated Tauri commands: `set_active_profile`, `set_current_save`, `switch_profile`, `save_profiles_cache`, `read_profiles_cache`, `save_last_profile`, `read_last_profile`
- Refactored JS frontend:
  - Improved profile scan & save picker integration
  - Added automatic last-profile loading with cache fallback
  - Fixed dropdown handling for profiles and saves
  - Improved toast notifications for success/error

Current state:
- Profile scan works and lists profiles correctly
- Save picker now populates with valid quicksave/autosave/manual folders
- Load profile & load save commands handle paths correctly

To-Do / Next Steps:
- Implement robust error handling for missing `game.sii` files
- Ensure autoloaded last-profile correctly refreshes save list
- Add sorting of manual saves numerically if needed
- Test full ETS2 profile + save workflow end-to-end
- Consider caching decrypted save files for performance
- Add unit tests for Rust backend commands

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Launch",
             "type": "lldb",
             "request": "launch",
-            "program": "${workspaceRoot}//ets2-tool//src-tauri//target//release//ets2-tools.exe",
+            "program": "?${workspaceRoot}//ets2-tool//src-tauri//target//release//ets2-tools.exe",
             "args": [],
             "cwd": "${workspaceRoot}"
         }
