--- a/ets2-tool/package.json
+++ b/ets2-tool/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@tauri-apps/plugin-fs": "^2.4.4",
     "@tauri-apps/plugin-process": "^2.3.1",
     "@tauri-apps/plugin-updater": "^2.9.0"
   }
